Fix badges in dark mode

--- a/src/css/components/badge.css
+++ b/src/css/components/badge.css
@@ -14,3 +14,7 @@
   color: var(--red11);
   border-color: var(--red7);
 }
+
+.badge--secondary {
+  color: var(--gray12);
+}
